# NeonCicada.ai

./: .gitattributes  .gitignore  Dockerfile  README.md  Readme.md  pyproject.toml  requirements.txt
data/: encodings(arcface).pkl  encodings(facenet).pkl  encodings.pkl  train_imgs(face_net).pkl  train_imgs.pkl  train_labels(arcface).pkl  train_labels.pkl
data/lfw/: train_imgs.pkl  train_labels.pkl
data/train/Алина Линева/: Алина Линева
data/train/Алёна Николаева/: Алёна Николаева
data/train/Анастасия Платонова/: Анастасия Платонова
data/train/Владимир Барсуков/: Владимир Барсуков
data/train/Екатерина Титова/: Екатерина Титова
data/train/Ксюша Кандина/: Ксюша Кандина1
data/train/Лиза Старовойт/: Лиза Старовойт
data/train/Полина Богданова/: Полина Богданова
data/train/Яна Коваленко/: Яна Коваленко
data/validate/Анастасия Платонова/: Анастасия Платонова1
data/validate/Вероника Никитина/: Вероника Никитина
data/validate/Вика Воеводская/: Вика Воеводская
data/validate/Диана Асрутдинова/: Диана Асрутдинова
data/validate/Мария Сафонкина/: Мария Сафонкина
model/: model.py
neon_cicada/: image_processing.ipynb  main.py  model.py  ui.py
src/: config.py  image_processing.ipynb  main.py  test.py  test_benchmarks.ipynb  ui.py  upload_datasets.ipynb
src/data/: encodings(arcface).pkl  encodings(face_net).pkl  train_labels(arcface).pkl
src/models/: model.py
