[tool.poetry]
name = "neon-cicada-ai"
version = "0.1.0"
description = ""
authors = ["maxim <themain@gmai.com>"]
readme = "README.md"
packages = [{include = "neon_cicada"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0.86"
insightface = "^0.7.3"
pandas = "^2.2.3"
numpy = "2.1.1"
pyqt6 = "^6.8.1"
face-recognition = "^1.3.0"
onnxruntime = "^1.20.1"
ultralytics = "^8.3.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
